2002-07-22  Philip Blundell  <philb@gnu.org>

	* sysdeps/unix/sysv/linux/arm/errlist.c: Remove extra weak alias
	definiton of _old_sys_nerr.  Define _old_sys_errlist as strong
	alias.

2002-07-24  Ulrich Drepper  <drepper@redhat.com>

	* locale/hashval.h: Make more self-containedby defining LONG_BITS.
	* locale/programs/simple-hash.c: Remove LONG_BITS definition.

	* locale/programs/locarchive.c (add_locale_to_archive): Correct
	test to detect duplicate locales.

	* libio/fileops.c (_IO_new_file_seekoff): Fail if relative
	position would be before beginning of file.
	(_IO_file_seekoff_mmap): Likewise.
	* libio/Makefile (tests): Add bug-fseek.
	* libio/bug-fseek.c: New file.

	* intl/explodename.c: Remove support for CEN-style locale variables.
	It was never used and shouldn't be since it's not portable.
	* intl/finddomain.c: Likewise.
	* intl/l10nflist.c: Likewise.
	* intl/loadinfo.h: Likewise.
	* locale/findlocale.c: Likewise.

2002-07-24  Roland McGrath  <roland@frob.com>

	* libio/fileops.c (_IO_file_seekoff_mmap): When just examining the
	position, calculate it to take into account an active pushback buffer.

	* libio/Makefile (tests): Add bug-ungetc.
	* libio/bug-ungetc.c: New file.

2002-07-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-tls.c: New file.
	* csu/Makefile (routines): Add libc-tls.
	(static-only-routines): Add libc-tls.
	* elf/dl-support.c (_dl_phdr): New variable.
	(_dl_phnum): New variable.
	(_dl_aux_init): Initialize _dl_phdr and _dl_phnum from aux vector.
	* sysdeps/generic/libc-start.c (__libc_start_main): Reorganize code
	for !SHARED.  First look through auxiliary vector.  If TLS always
	call __pthread_initialize_minimal.

	* sysdeps/generic/dl-tls.c (_dl_allocate_tls): Make sure size argument
	in mmap call is never zero.

2002-07-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/fpu/s_copysign.S: Use optimized version.
	* sysdeps/x86_64/fpu/s_copysignf.S: Likewise.

2002-07-22  Ulrich Drepper  <drepper@redhat.com>
